Hw9 task_2 done